2013-09-11 Riccardo Mottola <rm@gnu.org>

	* InFilters/DCCSupport/DCCObject.m
	Cast to long.

2013-09-10 Riccardo Mottola <rm@gnu.org>

	* Output/GNUstepOutput/Models/Channel.m
	* Output/GNUstepOutput/Controllers/Preferences/BundlePreferencesController.m
	Fix NSInteger/NSUInteger

2013-09-09 Riccardo Mottola <rm@gnu.org>

	* Input/NetclassesInput/main.m
	Rewrite string macros.

2013-09-09 Riccardo Mottola <rm@gnu.org>

	* Output/GNUstepOutput/Controllers/ServerListController.h
	* Output/GNUstepOutput/Controllers/ServerListController.m
	* Output/GNUstepOutput/Controllers/ContentControllers/ContentController.h
	* TalkSoupBundles/TalkSoup.m
	NSInteger/NSUInteger fixes.

2013-09-08 Riccardo Mottola <rm@gnu.org>

	* Output/GNUstepOutput/Controllers/ConnectionController/ConnectionControllerInFilter.m
	* TalkSoupBundles/TalkSoup.h
	Do not initialize attributed strings with NIL.

2013-09-01 Riccardo Mottola <rm@gnu.org>

	* Output/GNUstepOutput/Misc/NSObjectAdditions.m
	Import GNUstep runtime patches, but keep old Mac code.

2005-09-06 Andy Ruder <aeruder at ksu dot edu>
 * TalkSoup 1.0alpha 

2005-07-14 Andrew Ruder <aeruder@ksu.edu>
 * GNUstepOutput/BundlePreferences: Moved help text to external file,
 corrected help text.  Corrected NSTableView handling...

 * GNUstepOutput/Misc: Added code to debug NSView hierarchies

 * GNUstepOutput: Complete overhaul of NSTextView initializations, fixing
 of some corrupted gorms, making text field take on chat font, and other 
 bug fixes.
 
2005-07-12 Andrew Ruder <aeruder@ksu.edu>
 * GNUstepOutput
   NetclassesInput: Made changes to allow default quit message to work
   when quitting the app, closing a window, and /quit.

2005-07-07 Andrew Ruder <aeruder@ksu.edu>
 * GNUstepOutput: Moved to using distributed notifications instead of 
 distributed objects.
 * GNUstepOutput: Fix autoresize of nickview
 * GNUstepOutput: Fix tab completion picking up noncommand commandTyping:

2005-06-27 Andrew Ruder <aeruder@ksu.edu>